WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316200
Name parameters for Vector
https://bugs.webkit.org/show_bug.cgi?id=316200
Summary
Name parameters for Vector
adrian_taylor
Reported
2026-06-03 06:14:00 PDT
For reasons not fully understood, the Swift/CMake/GTK/Linux build has errors along the lines of 'error: template parameter 'T' does not exist' from the Swift clang importer. These don't occur on Mac builds.
Attachments
Add attachment
proposed patch, testcase, etc.
adrian_taylor
Comment 1
2026-06-03 06:18:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66365
EWS
Comment 2
2026-06-03 09:18:13 PDT
Committed
314471@main
(9ad3decfd732): <
https://commits.webkit.org/314471@main
> Reviewed commits have been landed. Closing PR #66365 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug