[Swift GTK] Name parameters for Vector https://bugs.webkit.org/show_bug.cgi?id=316200

Reviewed by Nikolas Zimmermann.

GTK builds of the Swift BackForwardList result in errors like:

  WTF/Headers/wtf/Vector.h:620:7: error: template parameter 'T' does not exist

This is believed caused by the forward-declaration of Vector (within Forward.h)
ending up in a different clang submodule from the main Vector.h. It's not
entirely clear why this occurs on Linux only, but the solution is just to
ensure that the parameters are named even in the forward declaration.

Canonical link: https://commits.webkit.org/314471@main